--- a/src/Components/SearchWithTags.css
+++ b/src/Components/SearchWithTags.css
@@ -122,6 +122,8 @@
     display: flex;
     flex-direction: row;
     align-items: flex-end;
+    justify-items: center;
+    justify-content: space-between;
     margin-right: 10%;
 }
 
@@ -131,8 +133,9 @@
     background-color: black;
     color: whitesmoke;
     padding: 10px;
-    width: 10%;
+    width: 180px;
     border-radius: 25px;
+    margin-left: 50px;
     font-size: 12pt;
     margin-bottom: 2px;
     outline: none;
