--- a/src/Components/LoadingScreen.css
+++ b/src/Components/LoadingScreen.css
@@ -1,7 +1,7 @@
 .LoadingScreen {
-    font-style: italic;
-    font-family: "Prompt", Helvetica, sans-serif;
-    font-size: 25pt;
+    font-family: "Oranienbaum";
+    color: #4f6d7a;
+    font-size: 60pt;
     position: relative;
     text-align: center;
     margin-top: 20vh;
