--- a/src/Components/Card/CardList.css
+++ b/src/Components/Card/CardList.css
@@ -5,15 +5,11 @@
     font-size: 20pt;
 }
 
-ul {
+.container {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 300px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat();
-    background: white;
-    padding: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 50px;
+    grid-gap: 10em;
     border-radius: 25px;
 }
